--- a/components/input/style/mixin.less
+++ b/components/input/style/mixin.less
@@ -331,6 +331,7 @@
 
     & > * {
       display: inline-flex;
+      align-items: center;
       float: none;
       vertical-align: top; // https://github.com/ant-design/ant-design-pro/issues/139
       border-radius: 0;
